# a-star

./: .gitignore  CMakeLists.txt  astar3.hpp  main.cpp
data/: maze_big.pgm
source/: AStar.cpp  AStar.hpp  AStar2.cpp  AStar2.hpp  util.h
